Change nav paths to relative paths

--- a/interests/index.html
+++ b/interests/index.html
@@ -12,9 +12,9 @@
       <h1>Mohmedamir Arther</h1>
       <nav id="navigation">
         <ul>
-          <li><a href="/Arther-co/" class="active">Home</a></li>
-          <li><a href="/Arther-co/resume/">Resume</a></li>
-          <li><a href="/Arther-co/interests/">Interests</a></li>
+          <li><a href="../" class="active">Home</a></li>
+          <li><a href="../resume/">Resume</a></li>
+          <li><a href="../interests/">Interests</a></li>
         </ul>
       </nav>
     </header>
