Add grid lines to all pages

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport"
       content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
+      <link rel="stylesheet" href="//basehold.it/22" />
   </head>
   <body>
     <header id="header">
@@ -28,7 +29,7 @@
           Chicago, about an hour an a half away from miles campus therefore, I am only on
           campus 2 days a week. My favorite subjects are: Math, Science, and "Technology".
         </p>
-<h3 class="experience">Most recent experience</h3>
+        <h3 class="experience">Most recent experience</h3>
         <p>
           A little more than a year ago, the summer of 2016, I spent about two weeks in my
           uncle's backyard building a porch. A few of my cousins and I built a porch using
