--- a/interests/index.html
+++ b/interests/index.html
@@ -13,9 +13,9 @@
       <h1>Mohmedamir Arther</h1>
       <nav id="navigation">
         <ul>
-          <li><a href="../" class="active">Home</a></li>
-          <li><a href="../resume/">Resume</a></li>
-          <li><a href="../interests/">Interests</a></li>
+          <li id="nav-home"><a href="../" class="active">Home</a></li>
+          <li id="nav-resume"><a href="../resume/">Resume</a></li>
+          <li id="nav-interests"><a href="../interests/">Interests</a></li>
         </ul>
       </nav>
     </header>
