change figure class to id

--- a/interests/index.html
+++ b/interests/index.html
@@ -34,15 +34,15 @@
         </section>
         <section>
           <h3>My most recent trip to Canada</h3>
-          <figure class="niagara">
+          <figure id="niagara">
             <img src="../pic1.JPG" alt="niagara falls" />
             <figcaption> A picture of niagara falls. </figcaption>
           </figure>
-          <figure class="mountain">
+          <figure id="mountain">
             <img src="../pic2.jpg" alt="blue mountain" />
             <figcaption> Blue mountain. </figcaption>
           </figure>
-          <figure class="aquarium">
+          <figure id="aquarium">
             <img src="../pic3.jpg" alt="aquarium" />
             <figcaption> Ripley's aquarium of canada </figcaption>
           </figure>
