add id to separate iit and mather under education

--- a/resume/index.html
+++ b/resume/index.html
@@ -24,8 +24,8 @@
         <h2>Resume</h2>
         <section>
           <h3>Education</h3>
-          <ul>
-            <li class="school">
+          <ul id="school">
+            <li id="iit">
               Illinois Institute of Technology
               <ul class="details">
                 <li class="degree">
@@ -36,7 +36,7 @@
                 <li class="gpa">Current gpa 3.88 out of 4.00</li>
               </ul>
             </li>
-            <li class="school">
+            <li id="mather">
               Mather High School
               <ul class="details">
                 <li class="status">Graduated in 2016</li>
