add aside to skills

--- a/resume/index.html
+++ b/resume/index.html
@@ -20,11 +20,10 @@
       </nav>
     </header>
     <main id="content">
-      <article id="primary">
-        <h2>Resume</h2>
-        <section>
+      <h2>Resume</h2>
+        <article id="primary">
           <h3>Education</h3>
-          <ul id="school">
+          <ul>
             <li id="iit">
               Illinois Institute of Technology
               <ul class="details">
@@ -46,8 +45,8 @@
               </ul>
             </li>
           </ul>
-        </section>
-        <section>
+      </article>
+        <aside id="skills">
           <h3>Skills</h3>
           <ul>
             <li class="soft">
@@ -78,8 +77,7 @@
               </ul>
             </li>
           </ul>
-        </section>
-      </article>
+        </aside>
     </main>
     <footer id="footer">
       <p>&copy; 2017 Mohmedamir Arther</p>
