--- a/resume/index.html
+++ b/resume/index.html
@@ -7,6 +7,7 @@
       content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
       <link rel="stylesheet" href="../screen.css" />
       <link rel="stylesheet" href="#//basehold.it/22" />
+      <script src="../modernizr.js"></script>
   </head>
   <body>
     <header id="header">
@@ -21,8 +22,8 @@
     </header>
     <main id="content">
       <h2>Resume</h2>
-        <article id="primary">
-          <h3>Education</h3>
+      <article id="primary">
+        <h3>Education</h3>
           <ul>
             <li id="iit">
               Illinois Institute of Technology
@@ -46,8 +47,8 @@
             </li>
           </ul>
       </article>
-        <aside id="skills">
-          <h3>Skills</h3>
+      <aside id="skills">
+        <h3>Skills</h3>
           <ul>
             <li class="soft">
               Soft Skills
