add js to all pages

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html id="home" lang="en">
+<html class="no-js" id="home" lang="en">
   <head>
     <title>Mohmedamir Arther</title>
     <meta charset="utf-8" />
@@ -56,5 +56,7 @@
     <footer id="footer">
       <p>&copy; 2017 Mohmedamir Arther</p>
     </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="js/site.js"></script>
   </body>
 </html>
