add class no-js in html

--- a/interests/index.html
+++ b/interests/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html id="interests" lang="en">
+<html class="no-js" id="interests" lang="en">
   <head>
     <title>Mohmedamir Arther</title>
     <meta charset="utf-8" />
