--- a/resume/index.html
+++ b/resume/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html id="resume" lang="en">
+<html class="no-js" id="resume" lang="en">
   <head>
     <title>Mohmedamir Arther</title>
     <meta charset="utf-8" />
