--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
     <footer id="footer">
       <p>&copy; 2017 Mohmedamir Arther</p>
     </footer>
+    <aside>
+      <figure id="porch">
+        <img src="../pic4.JPG" alt="porch" />
+        <figcaption> The Porch. </figcaption>
+      </figure>
+    </aside>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="js/site.js"></script>
   </body>
