move image to media

--- a/interests/index.html
+++ b/interests/index.html
@@ -36,15 +36,15 @@
         <section>
           <h3>My most recent trip to Canada</h3>
           <figure id="niagara">
-            <img src="../pic1.JPG" alt="niagara falls" />
+            <img src="../media/pic1.JPG" alt="niagara falls" />
             <figcaption> A picture of niagara falls. </figcaption>
           </figure>
           <figure id="mountain">
-            <img src="../pic2.jpg" alt="blue mountain" />
+            <img src="../media/pic2.jpg" alt="blue mountain" />
             <figcaption> Blue mountain. </figcaption>
           </figure>
           <figure id="aquarium">
-            <img src="../pic3.jpg" alt="aquarium" />
+            <img src="../media/pic3.jpg" alt="aquarium" />
             <figcaption> Ripley's aquarium of canada </figcaption>
           </figure>
         </section>
