move aside inside main and add id secondary to aside

--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
           <li class="phone">Phone: (312)-725-2457 </li>
         </ul>
       </article>
+      <aside id="secondary">
+        <figure id="porch">
+          <img src="../media/pic4.JPG" alt="porch" />
+          <figcaption> The Porch </figcaption>
+        </figure>
+      </aside>
     </main>
-    <aside>
-      <figure id="porch">
-        <img src="../media/pic4.JPG" alt="porch" />
-        <figcaption> The Porch </figcaption>
-      </figure>
-    </aside>
     <footer id="footer">
       <p>&copy; 2017 Mohmedamir Arther</p>
     </footer>
