--- a/interests/index.html
+++ b/interests/index.html
@@ -49,6 +49,9 @@
           </figure>
         </section>
       </article>
+      <video controls id="video">
+        <source src="../media/video.mp4" type="video/mp4" />
+        <p>Sorry, your browser doesn't support mp4 file</p>
     </main>
     <footer id="footer">
       <p>&copy; 2017 Mohmedamir Arther</p>
