close the video tag

--- a/interests/index.html
+++ b/interests/index.html
@@ -51,7 +51,8 @@
       </article>
       <video controls id="video">
         <source src="../media/video.mp4" type="video/mp4" />
-        <p>Sorry, your browser doesn't support mp4 file</p>
+        <p>Sorry, your browser doesn't support mp4 file </p>
+      </video>
     </main>
     <footer id="footer">
       <p>&copy; 2017 Mohmedamir Arther</p>
