--- a/resume/index.html
+++ b/resume/index.html
@@ -84,6 +84,6 @@
       <p>&copy; 2017 Mohmedamir Arther</p>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="js/site.js"></script>
+    <script src="../js/site.js"></script>
   </body>
 </html>
