press p to play and pause the video

--- a/interests/index.html
+++ b/interests/index.html
@@ -53,6 +53,7 @@
         <source src="../media/video.mp4" type="video/mp4" />
         <p>Sorry, your browser doesn't support mp4 file </p>
       </video>
+      <p>Press p to play and pause the video!</p>
     </main>
     <footer id="footer">
       <p>&copy; 2017 Mohmedamir Arther</p>
