move porch image above contact for smaller media screens

--- a/index.html
+++ b/index.html
@@ -45,6 +45,14 @@
           the project but, i didn't give up neither did my cousin. And being very careful
           and precise my cousins and I finished building it.
         </p>
+      </article>
+        <article id="secondary">
+          <figure id="porch">
+            <img src="../media/pic4.JPG" alt="porch" />
+            <figcaption> The Porch </figcaption>
+          </figure>
+        </article>
+        <article>
         <h4 class="contact">Contact</h4>
         <ul class="details">
           <li class="social">Social Media</li>
@@ -73,12 +81,6 @@
         </ol>
       </form>
       </article>
-      <aside id="secondary">
-        <figure id="porch">
-          <img src="../media/pic4.JPG" alt="porch" />
-          <figcaption> The Porch </figcaption>
-        </figure>
-      </aside>
     </main>
     <footer id="footer">
       <p>&copy; 2017 Mohmedamir Arther</p>
