change the layout of images at media screen min-width 860px to all in one row

--- a/interests/index.html
+++ b/interests/index.html
@@ -33,8 +33,8 @@
             <li>Try different activies</li>
           </ul>
         </section>
-        <section>
-          <h3>My most recent trip to Canada</h3>
+        <h3>My most recent trip to Canada</h3>
+        <section id="canada">
           <figure id="niagara">
             <img src="../media/pic1.JPG" alt="niagara falls" />
             <figcaption> A picture of niagara falls. </figcaption>
@@ -48,12 +48,14 @@
             <figcaption> Ripley's aquarium of canada </figcaption>
           </figure>
         </section>
+        <section class="second">
+          <video controls id="video">
+            <source src="../media/video.mp4" type="video/mp4" />
+            <p>Sorry, your browser doesn't support mp4 file </p>
+          </video>
+          <p>Press p to play and pause the video!</p>
+        </section>
       </article>
-      <video controls id="video">
-        <source src="../media/video.mp4" type="video/mp4" />
-        <p>Sorry, your browser doesn't support mp4 file </p>
-      </video>
-      <p>Press p to play and pause the video!</p>
     </main>
     <footer id="footer">
       <p>&copy; 2017 Mohmedamir Arther</p>
