console log comment submitted on form submit

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <li class="email">Email: marther@hawk.iit.edu</li>
           <li class="phone">Phone: (312)-725-2457 </li>
         </ul>
-        <form>
+        <form id="form">
         <h5>Send Me a Message</h5>
         <ol>
           <li>* Please fill in all the fields</li>
