add font style size and weight to h5 and id fill

--- a/index.html
+++ b/index.html
@@ -62,20 +62,20 @@
         <form id="form">
         <h5>Send Me a Message</h5>
         <ol>
-          <li>* Please fill in all the fields</li>
-          <li id="input-name">
+          <li id="fill">* Please fill in all the fields</li>
+          <li>
             <label for="name">Name</label>
             <input type="text" name="name" id="name" required="required" />
           </li>
-          <li id="input-email">
+          <li>
             <label for="email">Email</label>
             <input type="email" name="email" id="email" required="required" pattern="^.+@.+$" />
           </li>
-          <li id="input-message">
+          <li>
             <label for="message">Message</label>
             <input type="text" name="message" id="message" required="required" />
           </li>
-          <li id="input-submit">
+          <li>
             <input type="submit" name="submit" id="submit" value="Submit" />
           </li>
         </ol>
