fix all code, 0 errors from all linters

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </nav>
     </header>
     <main id="content">
-      <article id="primary">
+      <section id="primary">
         <h2 class="about">About me</h2>
         <p>
           My name is Mohmedamir Arther but, you'll can call me Amir. I'm currently
@@ -45,13 +45,13 @@
           the project but, i didn't give up neither did my cousin. And being very careful
           and precise my cousins and I finished building it.
         </p>
-      </article>
-        <article id="secondary">
+      </section>
+      <section id="secondary">
+        <h6>The Porch</h6>
           <figure id="porch">
             <img src="../media/pic4.JPG" alt="porch" />
-            <figcaption> The Porch </figcaption>
           </figure>
-        </article>
+        </section>
         <article>
         <h4 class="contact">Contact</h4>
         <ul class="details">
@@ -80,7 +80,7 @@
           </li>
         </ol>
       </form>
-      </article>
+    </article>
     </main>
     <footer id="footer">
       <p>&copy; 2017 Mohmedamir Arther</p>
