--- a/interests/index.html
+++ b/interests/index.html
@@ -37,15 +37,15 @@
         <section id="canada">
           <figure id="niagara">
             <img src="../media/pic1.JPG" alt="niagara falls" />
-            <figcaption> A picture of niagara falls. </figcaption>
+            <h6> A picture of niagara falls. </h6>
           </figure>
           <figure id="mountain">
             <img src="../media/pic2.jpg" alt="blue mountain" />
-            <figcaption> Blue mountain. </figcaption>
+            <h6> Blue mountain. </h6>
           </figure>
           <figure id="aquarium">
             <img src="../media/pic3.jpg" alt="aquarium" />
-            <figcaption> Ripley's aquarium of canada </figcaption>
+            <h6> Ripley's aquarium of canada </h6>
           </figure>
         </section>
         <section class="second">
@@ -53,7 +53,7 @@
             <source src="../media/video.mp4" type="video/mp4" />
             <p>Sorry, your browser doesn't support mp4 file </p>
           </video>
-          <p>Press p to play and pause the video!</p>
+          <h6>Press p to play and pause the video!</h6>
         </section>
       </article>
     </main>
